--- a/animal.html
+++ b/animal.html
@@ -19,15 +19,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<header>
+    <header>
 
 
-</header>
+    </header>
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -63,43 +62,38 @@
     </div>
 
     <!-- Ficha - Carrusel -->
-    <div class="container conCarrusel">
+    <div class="container">
         <div class="row">
-            <div class="col col-sm-6">
+            <div class="col col-12 col-sm-6">
                 <div class="row">
                     <div class="col col-sm-12">
-                        <div class="colIzq">
-                            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img class="d-block w-100" src="assets/carr_01.jpg" alt="First slide">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/carr_02.jpg" alt="Second slide">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/carr_03.jpg" alt="Third slide">
-                                    </div>
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="assets/carr_01.jpg" alt="First slide">
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Next</span>
-                                </a>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="assets/carr_02.jpg" alt="Second slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="assets/carr_03.jpg" alt="Third slide">
+                                </div>
                             </div>
+                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
                         </div>
                     </div>
-                    <div class="col col-sm-12">
-                        <div class="colIzq">
-                            <figure class="figure">
-                                <img src="assets/Chewy-pet-food-online-store.gif" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                            </figure>
-                        </div>
+                    <div class="col col-12 col-sm-12">
+                        <figure class="figure">
+                            <img src="assets/Chewy-pet-food-online-store.gif" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                        </figure>
                     </div>
-
                 </div>
             </div>
 
@@ -121,71 +115,62 @@
                         </div>
 
                     </div>
-
-                    <!-- Card -->
-                    <div class="card booking-card">
-
-                        <!-- Card image -->
-                        <div class="view overlay">
-                            <img class="card-img-top" src="assets/dog_10.jpg" alt="Card image cap">
-                            <a href="#!">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-
-                        <!-- Card content -->
-                        <div class="card-body p-3 mb-2 bg-light text-dark">
-
-                            <!-- Title -->
-                            <h4 class="card-title font-weight-bold"><a>Tipo: Bulldog Francés</a></h4>
-                            <!-- Data -->
-                            <hr class="my-4">
-                            <ul class="">
-                                <li class="">Color de pelo</li>
-                                <li class="">Color de ojos</li>
-
-                            </ul>
-
-                            <hr class="my-4">
-                            <p class="lead"><strong>Descripción</strong></p>
-                            <ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
-                                <li class="list-inline-item">
-
-                                    <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                                </li>
-                            </ul>
-                            <hr class="my-4">
-                            <p class="lead"><strong>Datos del Contacto</strong></p>
-                            <ul class=".bg-light">
-                                <li class=".bg-light">Nombre<i class=""> </i></li>
-                                <li class=".bg-light">Telefono<i class=""></i></li>
-                                <li class=".bg-light">Email<i class=""></i></li>
-                            </ul>
-                            <button type="button" class="btn btn-info">Contactar</button>
-                            <hr class="my-4">
-                            <p class="lead"><strong>Barrio: La Comercial</strong></p>
-                            <hr class="my-4">
-                            <!-- Button -->
-                            <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
-                        </div>
-
+                    <!-- Card image -->
+                    <div class="view overlay">
+                        <img class="card-img-top" src="assets/dog_10.jpg" alt="Card image cap">
+                        <a href="#!">
+                            <div class="mask rgba-white-slight"></div>
+                        </a>
                     </div>
-                    <!-- Card -->
+
+                    <!-- Card content -->
+                    <div class="card-body p-3 mb-2 bg-light text-dark">
+
+                        <!-- Title -->
+                        <h4 class="card-title font-weight-bold"><a>Tipo: Bulldog Francés</a></h4>
+                        <!-- Data -->
+                        <hr class="my-4">
+                        <ul class="">
+                            <li class="">Color de pelo</li>
+                            <li class="">Color de ojos</li>
+
+                        </ul>
+
+                        <hr class="my-4">
+                        <p class="lead"><strong>Descripción</strong></p>
+                        <ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
+                            <li class="list-inline-item">
+
+                                <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                            </li>
+                        </ul>
+                        <hr class="my-4">
+                        <p class="lead"><strong>Datos del Contacto</strong></p>
+                        <ul class=".bg-light">
+                            <li class=".bg-light">Nombre<i class=""> </i></li>
+                            <li class=".bg-light">Telefono<i class=""></i></li>
+                            <li class=".bg-light">Email<i class=""></i></li>
+                        </ul>
+                        <button type="button" class="btn btn-info">Contactar</button>
+                        <hr class="my-4">
+                        <p class="lead"><strong>Barrio: La Comercial</strong></p>
+                        <hr class="my-4">
+                        <!-- Button -->
+                        <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
 
 
-    <!--FOOTER-->
-    <hr />
-    <blockquote class="blockquote"></blockquote>
-    <footer class="blockquote-footer text-center">
-        <div class=footer>
-            <p>Posted by: Luis Besil</p>
-            <p>Contact information: <a href="mailto:l.besil@gmail.com">l.besil@gmail.com</a></p>
+    <!-- footer -->
+    <footer>
+        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
+            <span class="second-line">All Rights Reserved.</span>
+        </p>
     </footer>
-    </blockquote>
 
 </body>
 
